core project use netstandard2.0, move opentk render to another project

--- a/ThreeJs4Net.Demo/ThreeJs4Net.Demo.csproj
+++ b/ThreeJs4Net.Demo/ThreeJs4Net.Demo.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ThreeJs4Net.TK\ThreeJs4Net.TK.csproj" />
     <ProjectReference Include="..\ThreeJs4Net\ThreeJs4Net.csproj" />
   </ItemGroup>
 
