--- a/ThreeJs4Net.TK/ThreeJs4Net.TK.net6.csproj
+++ b/ThreeJs4Net.TK/ThreeJs4Net.TK.net6.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net472</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +14,7 @@
     <Compile Include="..\ThreeJs4Net\Renderers\WebGlRenderTargetCube.cs" Link="WebGlRenderTargetCube.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="3.3.1" />
+    <PackageReference Include="OpenTK" Version="4.8.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThreeJs4Net\ThreeJs4Net.csproj" />
